# roblox-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  PROJECT_PLAN.md  README.md  default.project.json  flake.nix  foreman.toml  publish.sh
.github/workflows/: build.yml
docs-vitepress/: package.json  pnpm-lock.yaml
docs-vitepress/docs/: index.md
docs-vitepress/docs/.vitepress/: config.ts
docs-vitepress/docs/explanation/: _category_.json  architecture.md  rust-to-luau.md
docs-vitepress/docs/how-to/: _category_.json  advanced-compiler-options.md  advanced-state-management.md  compile-rust-to-luau.md  create-reactive-gui.md  debugging-compiled-code.md  integrate-gui-with-ecs.md  optimize-performance.md  style-gui-components.md
docs-vitepress/docs/reference/: _category_.json  reference-cli.md  reference-core.md  reference-ecs.md  reference-gui.md
docs-vitepress/docs/tutorials/: _category_.json  getting-started.md  hello-world-ecs.md  simple-gui.md
output/roblox/: MonsterGyroscope.rbxl
output/site/: analysis.html  chain.html  code.html  gyroscope.html  index.html  walk.html
roblox-rs-api/: Cargo.toml
roblox-rs-api/src/: datamodel.rs  events.rs  instance.rs  lib.rs  services.rs  types.rs
roblox-rs-cli/: Cargo.toml  README.md
roblox-rs-cli/roblox-rs-gui/: Cargo.toml
roblox-rs-cli/src/: main.rs
roblox-rs-core/: ACTOR_SYSTEM.md  Cargo.toml  PROJECT_STRUCTURE.md  README.md
roblox-rs-core/examples/simple_game/: main.rs  test.rs
roblox-rs-core/roblox_actor_test/: actor_system_test.rbxl  default.project.json  run_system_test.lua  run_tests.lua
roblox-rs-core/roblox_actor_test/src/: ActorSystem.lua  ActorSystemTest.lua  ActorTests.lua
roblox-rs-core/src/: compiler.rs  error.rs  lib.rs  luau.rs  macros.rs  test_utils.rs  utils.rs
roblox-rs-core/src/analysis/: memory.rs  mod.rs
roblox-rs-core/src/ast/: luau.rs  mod.rs  parser.rs  transformer.rs  visitor.rs
roblox-rs-core/src/codegen/: mod.rs
roblox-rs-core/src/debug/: breakpoint.rs  mod.rs
roblox-rs-core/src/dependencies/: cli.rs  mod.rs  web.rs
roblox-rs-core/src/memory/: manager.rs  mod.rs  pool.rs
roblox-rs-core/src/optimize/: mod.rs  optimized.rs
roblox-rs-core/src/packaging/: mod.rs  place_generator.rs
roblox-rs-core/src/packaging/place_gen/: mod.rs
roblox-rs-core/src/parallel/: mod.rs
roblox-rs-core/src/rojo/: mod.rs
roblox-rs-core/src/runtime/: actors.rs  debug.lua  debug.rs  debugger.rs  future.rs  mod.rs  optimized.rs
roblox-rs-core/src/runtime/actor/: mod.rs
roblox-rs-core/src/runtime/diagnostics/: mod.rs
roblox-rs-core/src/runtime/helpers/: mod.rs
roblox-rs-core/src/runtime/instance/: mod.rs
roblox-rs-core/src/runtime/networking/: mod.rs
roblox-rs-core/src/tests/: basic_test.rs  dependencies_test.rs  helpers.rs  integration_test.rs  luau_execution_test.rs  mod.rs  optimizations.rs  parallel_test.rs  pooling_test.rs  rojo_integration_test.rs  rojo_standalone_test.rs  rojo_test.rs  type_declaration_test.rs
roblox-rs-core/src/transform/: mod.rs
roblox-rs-core/src/transpiler/: mod.rs
roblox-rs-core/src/transpiler/ast/: mod.rs
roblox-rs-core/src/transpiler/codegen/: mod.rs
roblox-rs-core/src/transpiler/parser/: mod.rs
roblox-rs-core/src/transpiler/transformer/: mod.rs
roblox-rs-core/src/types/: mod.rs  optimizer.rs
roblox-rs-core/src/types/declarations/: fixed_mod.rs  mod.rs  placeholder.rs  roblox.d.rs  runtime.d.rs
roblox-rs-core/standalone_tests/: Cargo.toml  actor_runtime_integration_test  actor_runtime_integration_test.rs  actor_system.lua  actor_system.rs  actor_system_test  actor_system_test.rs  build.sh  dependency_runtime_integration_test.rs  dependency_runtime_test  main.rs  place_generator_test.rs  roblox_actor_test.lua  roblox_env_test  roblox_environment_test.rs  runtime_test.rs  runtime_tests
roblox-rs-core/standalone_tests/actor_system/: mod.rs
roblox-rs-core/test_project/client/: ui_controller.rs
roblox-rs-core/test_project/server/: network_test.rs
roblox-rs-core/test_project/shared/: networking.rs
roblox-rs-core/tests/: dependency_management_test.rs  integration_test.rs  optimization_integration_test.rs  place_gen_test.rs  reorganization_test.rs  run_structure_test.rs  runtime_helpers_test.rs  runtime_simple_test.rs  simple_game_test.rs  structure_test.rs  transform_integration_test.rs  transpiler_test.rs
roblox-rs-core/web-bundler/: index.html
roblox-rs-ecs/: Cargo.toml  DEPENDENCIES.md  README.md  ROADMAP.md  build.rs
roblox-rs-ecs/examples/: basic.rs  minimal.rs
roblox-rs-ecs/src/: app.rs  component.rs  entity.rs  event.rs  lib.rs  plugin.rs  prelude.rs  query.rs  resource.rs  roblox.rs  schedule.rs  system.rs  world.rs
roblox-rs-ecs/src/platform/: mod.rs  native.rs  roblox.rs
roblox-rs-ecs/tests/: entity_test.rs  system_test.rs
roblox-rs-gui/: Cargo.toml  README.md
roblox-rs-gui/src/: lib.rs
roblox-rs-rojo/: README.md
roblox-rs-tester/: Cargo.toml
roblox-rs-tester/src/: main.rs
scripts/: build_gyroscope.luau  gist-bridge.sh  gist.sh  monster_gyroscope.luau  site_common.luau
site-gen/: Cargo.toml
site-gen/src/: gyroscope.js  main.rs  pages.rs  style.css
src/ReplicatedStorage/: GyroscopeConfig.lua
src/ServerScriptService/: GyroscopeBuilder.server.lua
src/StarterGui/GyroscopeUI/: HUD.client.lua
