[workspace]
resolver = "2"
members = [
    "roblox-rs-cli",
    "roblox-rs-core",
    "roblox-rs-ecs",
    # These are planned future crates
    # "roblox-rs-rojo"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DunnoConz"]
license = "MIT"
repository = "https://github.com/DunnoConz/roblox-rs"
description = "A compiler that translates Rust code to optimized Luau for the Roblox platform"
keywords = ["roblox", "luau", "compiler", "rust", "game-dev"]
categories = ["compilers", "game-development"]

[workspace.dependencies]
# Parsing and code generation
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"

# ECS framework
hecs = { version = "0.10.3", default-features = false }
bitflags = "2.4.1"
smallvec = { version = "1.11.2", default-features = false }
slotmap = { version = "1.0.7", default-features = false }
rayon = { version = "1.8.0" }
parking_lot = { version = "0.12.1" }

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
log = { version = "0.4" }
env_logger = { version = "0.10" }

# CLI utilities
clap = { version = "4.4", features = ["derive"] }

# Luau integration 
luau-sys = { version = "0.1.0" }

# Testing
pretty_assertions = "1.4"

[workspace.features]
# Compilation targets
default = ["native"]
native = ["parking_lot", "rayon", "log/std", "env_logger"]
roblox = []

# Compilation strategies
transpile = []         # Source-to-source translation
interpret = ["luau-sys"] # Compile to Luau bytecode for VM interpretation 