[package]
name = "roblox-rs-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Roblox API simulation and Luau integration for roblox-rs"
keywords = ["roblox", "luau", "api", "simulation", "game-dev"]
categories = ["game-development", "api-bindings"]

[dependencies]
# Core dependencies from workspace
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true

# Luau integration
mlua = { version = "0.9", features = ["luau"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async support
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
pretty_assertions.workspace = true
tokio-test = "0.4"

[features]
default = ["native"]
native = []
roblox = [] 