[package]
name = "roblox-rs-tester"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
roblox-rs-core = { path = "../roblox-rs-core" }
